crates/ars-components/src/utility/snapshots/ars_components__utility__toggle__tests__toggle_indicator_off.snap
---
source: crates/ars-components/src/utility/toggle.rs
expression: "snapshot_attrs(&off.connect(&|_| {}).indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toggle",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "off",
            ),
        ),
    ],
    styles: [],
}
