crates/ars-components/src/utility/snapshots/ars_components__utility__toggle__tests__toggle_root_off.snap
---
source: crates/ars-components/src/utility/toggle.rs
expression: "snapshot_attrs(&off.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "toggle",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "off",
            ),
        ),
        (
            Aria(
                Pressed,
            ),
            String(
                "false",
            ),
        ),
        (
            Id,
            String(
                "bold",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
